add filter functionality

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
     <main class="page-movies">
         <ul class="movie-list movie__gridbox">
-            <li class="movie-item">
-                <img class="movie__display" src="#" alt="movie-name">
+<!--             <li class="movie-item"> 
+                <img class="movie-image movie__display" src="#" alt="movie-name">
                 <a class="movie-redirect" href="#imdb-id" target="_blank" rel="noopener noreferrer"></a>
-            </li>
+            </li> -->
         </ul>
     </main>
 
